--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     padding-left: 10ch;
     padding-right: 10ch;
 }
+div.title {
+    text-align: center;
+}
 
 div.title h1 {
     margin-bottom: 0;
