--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     padding-left: 10ch;
     padding-right: 10ch;
 }
+
 div.title {
     text-align: center;
 }
@@ -16,10 +17,13 @@ div.title h1 {
 
 div.image {
     display: grid;
-    font-size: 10px;
-    text-align: center;
     gap: 0.5em;
     margin: 30px;
+}
+
+div.image .caption {
+    font-size: 10px;
+    text-align: center;
 }
 
 div.image img {
@@ -28,3 +32,14 @@ div.image img {
     border: 2px solid black;
 }
 
+h3 {
+    text-align: center;
+}
+
+img#model {
+    display: block;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid black;
+}
